# holochain-ui

./: .gitignore  .travis.yml  Channels.qml  Chat.qml  Chat2.qml  Clock.qml  CommonButton.qml  CommonButton.qmlc  ContactDelegate.qml  ContactDelegate.qmlc  ContactSearchDelegate.qml  Contacts.qml  Contacts.qmlc  Dockerfile  FindTime.qml  HeartBeat.qml  Home.qml  HomeForm.ui.qml  JsonModel.qml  JsonModel.qmlc  LICENSE  NewChannel.qml  NewChannel.qmlc  Page1Form.ui.qml  Page2Form.ui.qml  PresenceArcs.qml  Profiles.qml  README.md  RecursiveJsonModel.qml  RecursiveList.qml  RoundedAvatar.qml  RoundedAvatar.qmlc  Splash.qml  bridge_specs.json  container-config.json  container-config.toml  docker-compose-new.yml  docker-compose.yml  foo  iframe.html  (+16 more)
Sketch /: AoP Desktop.sketch  AoP wireframes.sketch  hApps logos + icons.sketch
data/: channels.json  contacts.json  messages_philip_jean_micah.json  messages_philip_micah.json  presence_philip_jean_micah.json  presence_philip_micah.json
dna/: dna.json  tsconfig.json
dna-src/: build.sh  dna.json  package.json  properties_schema.json  types  vault-types
dna-src/boards/: boards.js
dna-src/calendar-api/: bundle.json
dna-src/custom_channel/: custom_channel.ts
dna-src/holo-chat/: .gitignore  .hcignore  bundle.json  config.toml
dna-src/holo-chat/zomes/personas/code/: .build  Cargo.toml
dna-src/holo-chat/zomes/personas/code/src/: lib.rs  persona.rs  utils.rs
dna-src/holo-chat/zomes/personas/code/src/persona/: handlers.rs  mod.rs
dna-src/holo-vault/: .gitignore  app.json
dna-src/holo-vault/zomes/personas/code/: Cargo.toml
dna-src/holo-vault/zomes/personas/code/src/: lib.rs  persona.rs
dna-src/holo-vault/zomes/personas/code/src/persona/: handlers.rs  mod.rs
dna-src/holochain/: holochain.js
dna-src/personas/: field.json  persona.json  personas.ts
dna-src/profiles/: profiles.js  profiles.ts
dna-src/users/: users.ts
dna/boards/: boards.js
dna/custom_channel/: custom_channel.js
dna/features/: features.js
dna/genesis/: genesis.js
dna/holo-chat/: bridge_specs.json  readme.md
dna/holochain/: features.js  genesis.js  holochain.js
dna/personas/: personas.js
docker/: Dockerfile  run-hc-tests.sh
static/: manager.b745e86df39c451abd14.bundle.js
test/: bridgeChat.json  custom_channel.json  identity.json  lane_test.json  main_test.json  personas.json  profiles.json
ui-automation/: cypress.json  package-lock.json  package.json
ui-src/: README.md  designer-change.sketch  package-lock.json  package.json  stories.asketch.json  tsconfig.json  tslint.json  updateMiddlewarecode.txt
ui-src-ts/: package.json  tsconfig.json
(+471 files in other folders)
