[package]
  name = "personas"
  version = "0.1.0"
  authors = ["willem <willemolding@gmail.com>"]
  edition = "2018"
[dependencies]
  serde = "1.0"
  serde_json = "1.0"
  serde_derive = "1.0"
  hdk = { git = "https://github.com/holochain/holochain-rust" , branch = "jsonstring" }
  holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust" , branch = "jsonstring" }
  holochain_core_types_derive = { git = "https://github.com/holochain/holochain-rust" , branch = "jsonstring" }

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]
